deploy/k8s/minio/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: go-app
  labels:
    app: minio
    component: storage
    tier: backend
spec:
  selector:
    matchLabels:
      app: minio
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: minio
      labels:
        app: minio
        component: storage
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address ":9090"
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 20
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 15
          ports:
            - containerPort: 9000
              name: minio-api
              protocol: TCP
            - containerPort: 9090
              name: minio-console
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pvc
      restartPolicy: Always
---
