deploy/k8s/minio/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: go-app
spec:
  selector:
    app: minio
  type: ClusterIP
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9090
      targetPort: 9090
---
