deploy/k8s/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: go-app
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    cert-manager.io/issuer: "ca-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - storage.example.com
      secretName: minio-api-tls
  rules:
    - host: storage.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: go-app
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: "ca-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "console.storage.example.com"
      secretName: minio-console-tls
  rules:
    - host: console.storage.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9090
